--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "knip": "knip --config ./knip.json"
+    "knip": "knip --config ./knip-config.ts"
   },
   "private": true,
   "dependencies": {
